<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/MaterialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="1dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/ageJobLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/age"
                                style="@style/H4Section"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                tools:text="23 ans"/>

                            <TextView
                                android:id="@+id/birthDate"
                                style="@style/SText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:text="24/11/1972"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/jobTitle"
                                style="@style/H4Section"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:text="Boucher"/>

                            <TextView
                                android:id="@+id/job"
                                style="@style/SText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/job" />

                        </LinearLayout>

                    </LinearLayout>


                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#1A495D74"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ageJobLayout" />

                    <LinearLayout
                        android:id="@+id/districtLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="bottom">

                            <TextView
                                android:id="@+id/numDistrict"
                                style="@style/H4Section"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                tools:text="6"/>

                            <TextView
                                android:id="@+id/district"
                                style="@style/SText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/district"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/departmentName"
                                style="@style/H4Section"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                tools:text="Bouche du Rhone"/>

                            <TextView
                                android:id="@+id/department"
                                style="@style/SText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/department"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/groupStatus"
                style="@style/H2SubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Membre"
                android:gravity="center"/>

            <TextView
                android:id="@+id/groupName"
                style="@style/H4Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Les Républicains"
                android:gravity="center"/>

            <TextView
                android:id="@+id/group"
                style="@style/SText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/political_group"/>

            <TextView
                android:id="@+id/otherMandates"
                style="@style/P1Text"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_mandates"
                android:layout_marginTop="30dp"/>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mandatesRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/card_mandate"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:visibility="gone"/>
            
            <LinearLayout
                android:id="@+id/twitterLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="64dp"
                android:padding="14dp"
                android:gravity="center"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/twitterIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_twitter_bird"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/twitter"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/twitterIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="\@djezfjeizfj"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
